tests/negative/gold/type-post-increment-test.gold
tests/negative/type-post-increment-test.toit:11:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/type-post-increment-test.toit:10:4: error: Type mismatch. Expected 'string'. Got 'int'
  a++
   ^~
tests/negative/type-post-increment-test.toit:10:4: error: Can't use value that is typed 'none'
  a++
   ^~
Compilation failed
